--- a/price.html
+++ b/price.html
@@ -49,19 +49,20 @@
         <h2 class="zayavka_h2">
             менеджер свяжется с вами<br>в течении нескольких минут
         </h2>
-        <form action="" class="zayavka_form">
-            <div class="zayavka_title">ваше имя:</div>
-            <input type="text" name="zayavka_name" class="zayavka_textinput zayavka_name">
-            <div class="zayavka_title">e-mail:</div>
-            <input type="text" name="zayavka_mail" class="zayavka_textinput zayavka_mail">
-            <div class="zayavka_title">телефон:</div>
-            <input type="text" name="zayavka_phone" class="zayavka_textinput zayavka_phone" placeholder="+7 (___) ___ - __ - __">
-            <input type="submit" value="Заказать транспорт" class="zayavka_button">
-        </form>
+        <div class="zayavka_bg">
+            <form action="" class="zayavka_form">
+                <div class="zayavka_title">ваше имя:</div>
+                <input type="text" name="zayavka_name" class="zayavka_textinput zayavka_name">
+                <div class="zayavka_title">e-mail:</div>
+                <input type="text" name="zayavka_mail" class="zayavka_textinput zayavka_mail">
+                <div class="zayavka_title">телефон:</div>
+                <input type="text" name="zayavka_phone" class="zayavka_textinput zayavka_phone" placeholder="+7 (___) ___ - __ - __">
+                <input type="submit" value="Заказать транспорт" class="zayavka_button">
+            </form>
+        </div>
 
         <div class="zayavka_description">
             ...или просто позвоните нам
-            <div class="zayavka_description_sub">
                 <div class="zayavka_description_sub_container">  <!-- flex -->
                     <div class="zayavka_description_sub_phone">
                         <img src="img/zayavka/phone.png" alt="" class="zayavka_phone_img">
@@ -73,10 +74,9 @@
                     </div>
                 </div> 
                 <img src="img/zayavka/click-click.png" alt="" class="click-click">
-            </div>
         </div>
     </div>
-    <!-- zayavka block -->
+    <!-- 123 zayavka block -->
 
     <div class="footer">
         <div class="menu_footer">
