--- a/price.html
+++ b/price.html
@@ -43,27 +43,31 @@
 
     <!-- zayavka block -->
     <div id="zayavka">
-        <h1 class="zayavka_header">
-            заполните заявку<br>ДЛЯ РАСЧЁТА СТОИМОСТИ
-        </h1>
-        <h2 class="zayavka_h2">
-            менеджер свяжется с вами<br>в течении нескольких минут
-        </h2>
-        <div class="zayavka_bg">
-            <form action="" class="zayavka_form">
-                <div class="zayavka_title">ваше имя:</div>
-                <input type="text" name="zayavka_name" class="zayavka_textinput zayavka_name">
-                <div class="zayavka_title">e-mail:</div>
-                <input type="text" name="zayavka_mail" class="zayavka_textinput zayavka_mail">
-                <div class="zayavka_title">телефон:</div>
-                <input type="text" name="zayavka_phone" class="zayavka_textinput zayavka_phone" placeholder="+7 (___) ___ - __ - __">
-                <input type="submit" value="Заказать транспорт" class="zayavka_button">
-            </form>
-        </div>
+            <div class="zayavka_container_one">
+            <div class="zayavka_container_two">
+                <h1 class="zayavka_header">
+                    заполните заявку<br>ДЛЯ РАСЧЁТА СТОИМОСТИ
+                </h1>
+                <h2 class="zayavka_h2">
+                    менеджер свяжется с вами<br>в течении нескольких минут
+                </h2>
+            </div>
+            <div class="zayavka_bg">
+                <form action="" class="zayavka_form">
+                    <div class="zayavka_title">ваше имя:</div>
+                    <input type="text" name="zayavka_name" class="zayavka_textinput zayavka_name">
+                    <div class="zayavka_title">e-mail:</div>
+                    <input type="text" name="zayavka_mail" class="zayavka_textinput zayavka_mail">
+                    <div class="zayavka_title">телефон:</div>
+                    <input type="text" name="zayavka_phone" class="zayavka_textinput zayavka_phone" placeholder="+7 (___) ___ - __ - __">
+                    <input type="submit" value="Заказать транспорт" class="zayavka_button">
+                </form>
+            </div>
+            </div>
 
         <div class="zayavka_description">
             ...или просто позвоните нам
-                <div class="zayavka_description_sub_container">  <!-- flex -->
+                <div class="zayavka_description_sub_container">
                     <div class="zayavka_description_sub_phone">
                         <img src="img/zayavka/phone.png" alt="" class="zayavka_phone_img">
                         <a href="tel:+79371749000" class="zayavka_phone_number">+7 (937) 174-9000</p>
