--- a/about.html
+++ b/about.html
@@ -51,7 +51,6 @@
                         <div id="prev-btn"></div>
                         <div id="next-btn"></div>
                     </div>
-                    <img src="img/LINES.png" alt="" class="lines" id="lines_main">     
                     <img src="img/CIRCLES.png" class = "circles" alt="" id="circles2"> 
                     <img src="img/CIRCLES.png" class = "circles" alt="" id="circles3"> 
                 </div>
@@ -76,8 +75,34 @@
                 </h2>
             </div>
         </div>
-        <img src="img/CIRCLES.png" class = "circles" alt="" id="circles2"> 
         <img src="img/CIRCLES.png" class = "circles" alt="" id="circles3">
+    </div>
+
+    <div id="squad">
+        <div class="block_header header_squad">Наша команда</div>
+        <div class="squad-flex-container">
+            <div class="squad-card" id="squad-card-1">
+                <div class="squad-text-container">
+                    <h1 class="squad-card-h1">Иван Иванов</h1>
+                    <h2 class="squad-card-h2">Водитель-экспедитор</h2>
+                    <p class="squad-card-p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid sequi minus soluta voluptatibus voluptate nostrum totam</p>
+                </div>
+            </div>
+            <div class="squad-card" id="squad-card-2">
+                <div class="squad-text-container">
+                    <h1 class="squad-card-h1">Иван Иванов</h1>
+                    <h2 class="squad-card-h2">Водитель-экспедитор</h2>
+                    <p class="squad-card-p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid sequi minus soluta voluptatibus voluptate nostrum totam</p>
+                </div>
+            </div>
+            <div class="squad-card" id="squad-card-3">
+                <div class="squad-text-container">
+                    <h1 class="squad-card-h1">Иван Иванов</h1>
+                    <h2 class="squad-card-h2">Водитель-экспедитор</h2>
+                    <p class="squad-card-p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid sequi minus soluta voluptatibus voluptate nostrum totam</p>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class="footer">
