--- a/uslugi.html
+++ b/uslugi.html
@@ -29,12 +29,58 @@
             </h1>
             <h2 class="main_usligu_h2">
                 подзаголовок lorem ipsum
-            </h2>
+            </h2>                        
+        </div>
+
+        <div class="uslugi_list uslugi_list_1">
+            <h3 class="uslugi_list_h3">
+                Переезды
+            </h3>
+            <div class="uslugi_flex">
+                <div class="uslugi_card" id="card_1">
+                    <p class="uslugi_card_p">Квартирный<br>переезд</p>
+                </div>
+                <div class="uslugi_card" id="card_2">
+                    <p class="uslugi_card_p">Дачный<br>переезд</p>
+                </div>
+            </div>
+        </div>
+        <div class="uslugi_list uslugi_list_2">
+            <h3 class="uslugi_list_h3">
+                Грузоперевозки
+            </h3>
+            <div class="uslugi_flex">
+                <div class="uslugi_card" id="card_3">
+                    <p class="uslugi_card_p">Перевозка<br>техники</p>
+                </div>
+                <div class="uslugi_card" id="card_4">
+                    <p class="uslugi_card_p">Перевозка<br>мебели</p>
+                </div>
+                <div class="uslugi_card" id="card_5">
+                    <p class="uslugi_card_p">Услуги<br>грузчиков</p>
+                </div>
+                <div class="uslugi_card" id="card_6">
+                    <p class="uslugi_card_p">Водители<br>экспедиторы</p>
+                </div>
+                <div class="uslugi_card" id="card_7">
+                    <p class="uslugi_card_p">Аренда авто<br>c грузчиком</p>
+                </div>
+            </div>
         </div>
     </div>
 
     <div id="uslugi_gazel">
-        
+        <div id="gazel_main">
+            <img src="img/uslugi/gazel.png" alt="" id="gazel_main_img">
+            <div id="gazel_text_container">
+                <h1 id="gazel_h1">Аренда авто</h1>
+                <h2 id="gazel_h2"><br>Акция!<br></h2>
+                <h3 id="gazel_h3"><br><br>При заказе на 7 часов<br>+1 час в подарок</h3>
+            </div>
+        </div>
+        <img src="img/LINES.png" alt="" class="lines" id="lines_main">     
+        <img src="img/CIRCLES2.png" class = "circles" alt="" id="circles3"> 
+        <img src="img/CIRCLES.png" class = "circles" alt="" id="circles_price"> 
     </div>
 
     <!-- zayavka block -->
