--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
 
     <div id="screen">        
-            <video width="100%" autoplay loop>
+            <video style="width:100vw;" autoplay loop>
                 <source src="img/video.mp4" type="video/mp4">                
             </video>
             <!-- <div id="video_cover"></div> -->
@@ -58,38 +58,41 @@
             <div class="block_header" id="block_header_adv">Наши преимущества</div>  
             <div id="adv_container">
                 <div id="adv_container2">
-                    <div class="adv_block">
-                        <img src="img/adv_icons/1.svg" alt="" class="adv_block_img">
+                    <div class="adv_block" id="adv_block_1">
+                        <!-- <img src="img/adv_icons/1.svg" alt="" class="adv_block_img"> -->
                         <p class="adv_block_text">Индивидуальный подход к каждому заказчику</p>
                     </div>
-                    <div class="adv_block">
-                        <img src="img/adv_icons/2.svg" alt="" class="adv_block_img">
-                        <p class="adv_block_text" id="adv_text_exception">Доставка груза:<br>
-                        •&nbsp;&nbsp;<font style="font-family: 'Roboto', sans-serif; font-size: 14px; text-align: left; color: #646464;">Догрузом<br>(без перегруза в другое ТС)</font><br>
-                        •&nbsp;&nbsp;<font style="font-family: 'Roboto', sans-serif; font-size: 14px; text-align: left; color: #646464;">Отдельной машиной</font>
-                        
+                    <div class="adv_block" id="adv_block_2">
+                        <!-- <img src="img/adv_icons/2.svg" alt="" class="adv_block_img"> -->
+                        <p class="adv_block_text" id="adv_text_exception2">Доставка груза:<br>
+                            <p class="adv_block_ol">
+                                •&nbsp;&nbsp;Догрузом<br>(без перегруза в другое ТС)<br>
+                                •&nbsp;&nbsp;Отдельной машиной
+                            </p>                                                 
                         </p>                    
                     </div>
-                    <div class="adv_block">
-                        <img src="img/adv_icons/3.svg" alt="" class="adv_block_img">
+                    <div class="adv_block" id="adv_block_3">
+                        <!-- <img src="img/adv_icons/3.svg" alt="" class="adv_block_img"> -->
                         <p class="adv_block_text">Предоставление заказчику<br>полного пакета документов<br>на ТС и экипаж</p>
                     </div>
                 </div>
                 <div id="adv_container2">
-                    <div class="adv_block">
-                        <img src="img/adv_icons/4.svg" alt="" class="adv_block_img">
+                    <div class="adv_block" id="adv_block_4">
+                        <!-- <img src="img/adv_icons/4.svg" alt="" class="adv_block_img"> -->
                         <p class="adv_block_text">Документальное оформление<br>договора-заявки</p>
                     </div>
-                    <div class="adv_block">
-                        <img src="img/adv_icons/5.svg" alt="" class="adv_block_img">
-                        <p class="adv_block_text" id="adv_text_exception">Возможность оплаты:<br>
-                            •&nbsp;&nbsp;<font style="font-family: 'Roboto', sans-serif; font-size: 14px; text-align: left; color: #646464;">Наличными</font><br>
-                            •&nbsp;&nbsp;<font style="font-family: 'Roboto', sans-serif; font-size: 14px; text-align: left; color: #646464;">На банковскую карту</font><br>
-                            •&nbsp;&nbsp;<font style="font-family: 'Roboto', sans-serif; font-size: 14px; text-align: left; color: #646464;">На расчётный счёт</font>
+                    <div class="adv_block" id="adv_block_5">
+                        <!-- <img src="img/adv_icons/5.svg" alt="" class="adv_block_img"> -->
+                        <p class="adv_block_text" id="adv_text_exception2">Возможность оплаты:<br>
+                            <p class="adv_block_ol">
+                            •&nbsp;&nbsp;Наличными<br>
+                            •&nbsp;&nbsp;На банковскую карту<br>
+                            •&nbsp;&nbsp;На расчётный счёт
+                            </p>
                         </p>
                     </div>
-                    <div class="adv_block">
-                        <img src="img/adv_icons/6.svg" alt="" class="adv_block_img">
+                    <div class="adv_block" id="adv_block_6">
+                        <!-- <img src="img/adv_icons/6.svg" alt="" class="adv_block_img"> -->
                         <p class="adv_block_text">Гарантия неизменности стоимости<br>после заключения сделки*</p>
                     </div>
                 </div>
