--- a/price.html
+++ b/price.html
@@ -70,11 +70,11 @@
                 <div class="zayavka_description_sub_container">
                     <div class="zayavka_description_sub_phone">
                         <img src="img/zayavka/phone.png" alt="" class="zayavka_phone_img">
-                        <a href="tel:+79371749000" class="zayavka_phone_number">+7 (937) 174-9000</p>
+                        <a href="tel:+79371749000" class="zayavka_phone_number">+7 (937) 174-9000</a>
                     </div>
                     <div class="zayavka_description_sub_phone">
                         <img src="img/zayavka/phone.png" alt="" class="zayavka_phone_img">
-                        <a href="tel:+79291749000" class="zayavka_phone_number">+7 (929) 174-9000</p>
+                        <a href="tel:+79291749000" class="zayavka_phone_number">+7 (929) 174-9000</a>
                     </div>
                 </div> 
                 <img src="img/zayavka/click-click.png" alt="" class="click-click">
