--- a/uslugi.html
+++ b/uslugi.html
@@ -24,12 +24,13 @@
 
     <div class="main_uslugi">
         <div class="zayavka_bg bg_main_usl">
-            <h1 class="main_usligu_h1">
-                Заголовок<br>номер четыре
-            </h1>
+            <div class="main_usligu_h1">
+                Miami Logistics<br> - это широкий выбор услуг по перевозке            
             <h2 class="main_usligu_h2">
-                подзаголовок lorem ipsum
+                Доставка грузов по России и СНГ
             </h2>                        
+            </div>
+            <img src="img/CIRCLES2.png" class = "circles" alt="" id="circles3"> 
         </div>
 
         <div class="uslugi_list uslugi_list_1">
@@ -66,7 +67,7 @@
                     <p class="uslugi_card_p">Аренда авто<br>c грузчиком</p>
                 </div>
             </div>
-        </div>
+        </div>        
     </div>
 
     <div id="uslugi_gazel">
@@ -74,13 +75,14 @@
             <img src="img/uslugi/gazel.png" alt="" id="gazel_main_img">
             <div id="gazel_text_container">
                 <h1 id="gazel_h1">Аренда авто</h1>
-                <h2 id="gazel_h2"><br>Акция!<br></h2>
-                <h3 id="gazel_h3"><br><br>При заказе на 7 часов<br>+1 час в подарок</h3>
+                <h2 id="gazel_h2"><br>Акция!</h2>
+                <h3 id="gazel_h3">При заказе авто на 7 часов<br>+1 час в подарок</h3>
+                <h4 id="gazel_h4"><br><br>Широкий выбор газелей<br>Оставьте заявку ниже<br>и узнайте подробности</h4>
             </div>
-        </div>
-        <img src="img/LINES.png" alt="" class="lines" id="lines_main">     
+        </div>            
         <img src="img/CIRCLES2.png" class = "circles" alt="" id="circles3"> 
         <img src="img/CIRCLES.png" class = "circles" alt="" id="circles_price"> 
+        <img src="img/LINES.png" alt="" class="lines" id="lines_main">     
     </div>
 
     <!-- zayavka block -->
@@ -112,11 +114,11 @@
             <div class="zayavka_description_sub_container">
                 <div class="zayavka_description_sub_phone">
                     <img src="img/zayavka/phone.png" alt="" class="zayavka_phone_img">
-                    <a href="tel:+79371749000" class="zayavka_phone_number">+7 (937) 174-9000</p>
+                    <a href="tel:+79371749000" class="zayavka_phone_number">+7 (937) 174-9000</a>
                 </div>
                 <div class="zayavka_description_sub_phone">
                     <img src="img/zayavka/phone.png" alt="" class="zayavka_phone_img">
-                    <a href="tel:+79291749000" class="zayavka_phone_number">+7 (929) 174-9000</p>
+                    <a href="tel:+79291749000" class="zayavka_phone_number">+7 (929) 174-9000</a>
                 </div>
             </div> 
             <img src="img/zayavka/click-click.png" alt="" class="click-click">
