--- a/about.html
+++ b/about.html
@@ -26,11 +26,12 @@
         <div class="flex-container">
             <div class="h1-container">
                 <h1 id="about-main-h1">
-                Заголовок<br>Номер 1
+                Miami Logistics<br>- это надёжность
                 </h1>
-                <h2 id="about-main-h2">
-                подзаголовок<br>В три три три<br>строчки
-                </h2>
+                <div id="about-main-h2"><br>
+                    Мы предлагаем профессиональное сопровождение ваших грузов от самого начала их доставки до получения<br><br>
+                    Широкий спектр услуг, надёжность доставки груза, соблюдение сроков, всё это - <font color=#F2994A>Miami Logistics</font>
+                </div>
             </div>
             <div class="slider-container">
                 <!-- SLIDER -->
@@ -66,12 +67,14 @@
             <div class="video-container">
                 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/XafW4d9XfSE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="border-radius: 20px;"></iframe>
             </div>
-            <div class="h1-container">
-                <h1 id="about-main-h1">
+            <div class="h1-container" id="h1-container-video">
+                <h1 class="h1_right" id="about-video-h1">
                 Посмотрите видео<br>о нашей работе
                 </h1>
-                <h2 id="about-main-h2">
-                подзаголовок<br>В три три три<br>строчки
+                <h2 id="about-main-h2-right"><br>
+                Внутренняя кухня компании - <br>
+                Весь рабочий процесс с момента получения заявки до доставки счастливому получателю<br>
+                Команда профессионалов
                 </h2>
             </div>
         </div>
@@ -103,6 +106,7 @@
                 </div>
             </div>
         </div>
+        <img src="img/LINES.png" alt="" class="lines" id="lines_about"> 
     </div>
 
     <div class="footer">
