--- a/price.html
+++ b/price.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main-1080.css">
     <link rel="stylesheet" href="price-1080.css">
-    <link rel="stylesheet" href="main-720.css">
+    <link rel="stylesheet" media="screen and (max-width: 1279px)" href="main-720.css">
     <link rel="stylesheet" href="main-480.css">
     <title>Miami Logostics | Грузоперевозки и переезд в Самаре</title>
 </head>
 <body>
     <div class="menu">
         <a href="index.html"><img src="img/logo.png" alt="" class="logo"></a>
+        <div class="menu_toggle"></div>
+        <div class="menu_cross"></div>
         <div class="menu_container">
             <a href="price.html" class="menu_item">Прайс</a>
             <a href="about.html" class="menu_item">О нас</a>
