--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                     Широкий спектр услуг, надёжность доставки груза, соблюдение сроков, всё это - <font color=#F2994A>Miami Logistics</font>
                 </div>
             </div>
-            <div class="slider-container">
+            <div class="slider-container" id="slider_container_about">
                 <!-- SLIDER -->
                 <div id="block-for-slider">
                     <div id="viewport">
