--- a/uslugi.html
+++ b/uslugi.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="main_uslugi">
-        <div class="zayavka_bg bg_main_usl">
+        <div class="zayavka_bg_usl">
             <div class="main_usligu_h1">
                 Miami Logistics<br> - это широкий выбор услуг по перевозке            
             <h2 class="main_usligu_h2">
@@ -82,7 +82,7 @@
                 <h4 id="gazel_h4"><br><br>Широкий выбор газелей<br>Оставьте заявку ниже<br>и узнайте подробности</h4>
             </div>
         </div>            
-        <img src="img/CIRCLES2.png" class = "circles" alt="" id="circles3"> 
+        <img src="img/CIRCLES2.png" class = "circles circles_uslugi" alt="" id="circles3"> 
         <img src="img/CIRCLES.png" class = "circles" alt="" id="circles_price"> 
         <img src="img/LINES.png" alt="" class="lines" id="lines_main">     
     </div>
