--- a/contacts.html
+++ b/contacts.html
@@ -47,10 +47,10 @@
             <div class="zayavka_container_one">
                 <div class="zayavka_container_two">
                     <h1 class="zayavka_header">
-                        заполните заявку<br>ДЛЯ РАСЧЁТА СТОИМОСТИ
+                        Остались вопросы?<br>
                     </h1>
                     <h2 class="zayavka_h2">
-                        менеджер свяжется с вами<br>в течении нескольких минут
+                       Заполните заявку и наш менеджер обсудит с Вами все интересующие Вас вопросы
                     </h2>
                 </div>
                 <div class="zayavka_bg">
