--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <!-- <div id="video_cover"></div> -->
         <div id="screen_header">
             Грузоперевозки<br>с <font color="#F2994A">Miami Logistics</font>
-            <div id="button_screen">Заказать транспорт</div>
+            <a href="price.html#zayavka" style="text-decoration: none;"><div id="button_screen">Заказать транспорт</div></a>
         </div>
     </div>
 
