--- a/uslugi.html
+++ b/uslugi.html
@@ -30,7 +30,16 @@
                 Miami Logistics<br> - это широкий выбор услуг по перевозке            
             <h2 class="main_usligu_h2">
                 Доставка грузов по России и СНГ
-            </h2>                        
+            </h2>  
+            <ul id="uslugi_mobile_fix">
+                <li>Квартирный переезд</li>
+                <li>Дачный переезд</li>
+                <li>Перевозка техники</li>
+                <li>Перевозка мебели</li>
+                <li>Услуги грузчиков</li>
+                <li>Водители-экспедиторы</li>
+                <li>Аренда авто с грузчиком</li>
+            </ul>
             </div>
             <img src="img/CIRCLES2.png" class = "circles" alt="" id="circles3"> 
         </div>
